// each other on Github, so don't worry too much on using the right prefix.
:issue: https://github.com/elastic/apm-server/issues/
:pull: https://github.com/elastic/apm-server/pull/


=== APM Server version HEAD
https://github.com/elastic/apm-server/compare/f9a2086ceed0b918e1a0b3d8ddc140fc21af0e74\...master[View commits]

==== Breaking changes


==== Bugfixes


==== Added


==== Deprecated


==== Known Issues


=== APM Server version 0.2.0
https://github.com/elastic/apm-server/compare/3ad33b3129c0be3b0e4057efc53948c381a2af79\...f9a2086ceed0b918e1a0b3d8ddc140fc21af0e74[View commits]

==== Breaking changes
- Changed response status code in the API from 201 to 202 {pull}34[34]
- Set dynamic mapping to false, enable only for `context.tags`. Fix issues with indexing. Removed from index: `request.headers_sent`, `app.argv`. Changes take place with {pull}43[43], after updating beats framework.
- Remove `context.db.sql` and add `context.db.instance`, `context.db.statement`, `context.db.type` and `context.db.user` instead {pull}38[38].
- Changed `context.response.status` object to simply storing `context.response.status_code` as a number {pull}49[49].
- Changed `error.checksum` to `error.grouping_field` {pull}83[83].
- Removed `server` namespace within `apm-server` in `apm-server.yml`. `server` properties are lifted up one level {pull}78[78].
- Changed default APM Server listen port from 8080 to 8200 {pull}91[91].
- Removed `debug` unneeded handler. {pull}85[85].

==== Bugfixes
- changed `context.system.title` to `context.system.process_title`, removed `transaction.context`, `trace.context` (already available on top level). {pull}10[10]
- changed type of `context.request.body` from `object` to `text`. {pull}27[27]
- incoming transactions and errors could reuse data from previous POSTs due to payload state being kept in processors {pull}98[98].