@@ -10,6 +10,21 @@ import time
 class Test(ElasticTest):
 
     @unittest.skipUnless(INTEGRATION_TESTS, "integration test")
+    def test_onboarding_doc(self):
+        """
+        This test starts the beat and checks that the onboarding doc has been published to ES
+        """
+        self.wait_until(lambda: self.es.indices.exists(self.index_name))
+        self.es.indices.refresh(index=self.index_name)
+
+        self.wait_until(
+            lambda: (self.es.count(index=self.index_name)['count'] == 1)
+        )
+
+        # Makes sure no error or warnings were logged
+        self.assert_no_logged_warnings()
+
+    @unittest.skipUnless(INTEGRATION_TESTS, "integration test")
     def test_load_docs_with_template_and_add_transaction(self):
         """
         This test starts the beat with a loaded template and sends transaction data to elasticsearch.
@@ -22,6 +37,14 @@ class Test(ElasticTest):
                                          'transaction',
                                          'payload.json'))
         self.load_docs_with_template(f, 'transactions', 9)
+
+        rs = self.es.count(index=self.index_name, body={
+                           "query": {"term": {"processor.event": "transaction"}}})
+        assert rs['count'] == 4, "found {} documents".format(rs['count'])
+
+        rs = self.es.count(index=self.index_name, body={
+                           "query": {"term": {"processor.event": "trace"}}})
+        assert rs['count'] == 5, "found {} documents".format(rs['count'])
 
     @unittest.skipUnless(INTEGRATION_TESTS, "integration test")
     def test_load_docs_with_template_and_add_error(self):
@@ -36,6 +59,10 @@ class Test(ElasticTest):
                                          'error',
                                          'payload.json'))
         self.load_docs_with_template(f, 'errors', 4)
+
+        rs = self.es.count(index=self.index_name, body={
+                           "query": {"term": {"processor.event": "error"}}})
+        assert rs['count'] == 4, "found {} documents".format(rs['count'])
 
     def load_docs_with_template(self, data_path, endpoint, expected_events_count):
 
@@ -54,13 +81,12 @@ class Test(ElasticTest):
         time.sleep(0.1)
         self.es.indices.refresh(index=self.index_name)
 
+        # Waits for the docs + 1. The additional document is the onboarding document
         self.wait_until(
             lambda: (self.es.count(index=self.index_name)['count'] ==
-                     expected_events_count)
+                     expected_events_count + 1)
         )
 
-        res = self.es.count(index=self.index_name)
-        assert expected_events_count == res['count']
         # Makes sure no error or warnings were logged
         self.assert_no_logged_warnings()
 
